MNEMOSYNE 1.1

(Note that for Windows users we recommend uninstalling the previous
version before doing an upgrade.)

*** IMPORTANT UPGRADE NOTICE ***

This version uses a different database format. Before upgrading, export your 
old data as xml. After upgrade, create a new database and import the old data
from the xml file.

	
MNEMOSYNE 1.0.2 :

-Polish translation by Tomasz Nazarenko.
-Japanese translation by Patrick Kenny.

	
	
MNEMOSYNE 1.0.1.1 : 2008-03-22
	
-Disabled making grade 0 the keyboard default for cards with previous
 grades 0 or 1, as a (Py)Qt bug seems to make it unreliable under Windows
 (reported by Bernhard Blum).
	
	
MNEMOSYNE 1.0.1 : 2008-03-16

-Make grade 0 the keyboard default for cards with previous grades 0 or 1.
-Add support for html style escaped unicode in txt import, to allow import
 of Supermemo databases containing unicode (requested by Patrick Kenny).
-Support import of Supermemo for Palm databases that were converted to XML
 by smconv.pl from http://smconvpl.sourceforge.net (code by Felix Engel).
-Make import of tab delimited files more robust (reported by nairbv).
-Added new option in config.py (backups_to_keep) to be able to change the
 number of daily backups to keep. Set to -1 for no limit (requested by 
 Patrick Kenny).
-Added new option in config.py (day_starts_at) to be able to change the
 moment a new day starts (requested by Patrick Kenny).	
-On Windows, log errors to a file in the user's directory, as opposed to a
 file in a system directory (requested by nairbv).
-Visually distinguish grades 0 and 1 from other grades (based on input
 from Juan Alonso and Mike Charlton.)
-Czech translation (cs) by Jiri Popelka and Petr Tomica.
-Chinese translation (zh_CN, zh_HK, zh_SG, zh_TW) by Leon Goo.
-French translation (fr) by Jamshid Bahar.


MNEMOSYNE 1.0 : 2007-12-27

(Note that for Windows users we recommend uninstalling the previous 
version before doing an upgrade.)
